[metadata]
name = sahara-plugin-storm
summary = Storm Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_plugin_storm

[entry_points]
sahara.cluster.plugins =
    storm = sahara_plugin_storm.plugins.storm.plugin:StormProvider

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[compile_catalog]
directory = sahara_plugin_storm/locale
domain = sahara_plugin_storm

[update_catalog]
domain = sahara_plugin_storm
output_dir = sahara_plugin_storm/locale
input_file = sahara_plugin_storm/locale/sahara_plugin_storm.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sahara_plugin_storm/locale/sahara_plugin_storm.pot

[wheel]
universal = 1
